--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<h1>Welcome to the future</h1>
-<p>Good things are coming soon.</p>
-<p>Sign up <%= link_to "here", "#" %></p>
+<div class ="jumbotron">
+	<h1>Welcome to the future.</h1>
+	<p>Good things coming soon.</p>
+	<p><%= link_to "Sign up", "#" , class: "btn btn-primary btn-lg"%></p>
+</div>
