--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,5 @@
-<h1>About me</h1>
-<p>I ended up in software PM without any prior engineering background and eventually decided I had to learn how to code. So I've been learning at One Month the basics of Ruby on Rails. This is my first project.</p>
+<div class ="jumbotron">
+	<h1>About me</h1>
+	<p>I ended up in software PM without any prior engineering background and eventually decided I had to learn how to code. So I've been learning at One Month the basics of Ruby on Rails. This is my first project.</p>
+	<p><%= link_to "Connect", "#" , class: "btn btn-primary btn-lg"%></p>
+</div>
