Updated the brand colors

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,6 +1,8 @@
 $body-bg:    #bdc3c7 ;
 $navbar-default-bg:   #7f8c8d ;
 $navbar-default-link-color:    white ;
-$navbar-default-brand-hover-color:  #f39c12 ;
+$navbar-default-brand-color:  #f39c12 ; 
+$navbar-default-brand-hover-color:  white ;
+$btn-primary-bg: #f39c12 ;
 
 @import "bootstrap" ;
