Minor bootstrap customizations

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,6 @@
 <div class ="jumbotron">
 	<h1>About me</h1>
-	<p>I ended up in software PM without any prior engineering background and eventually decided I had to learn how to code. So I've been learning at One Month the basics of Ruby on Rails. This is my first project.</p>
+	<p>I ended up in software PM without any prior engineering background.  Decided I had to learn how to code. So I've been learning at One Month the basics of Ruby on Rails.</p> 
+	<p>This is my first project.</p>
 	<p><%= link_to "Connect", "#" , class: "btn btn-primary btn-lg"%></p>
 </div>
