--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">JDS</a>
+      <%= link_to "JDS", root_path, class: "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,6 +19,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home" , root_path %></li>
         <li><%= link_to "About" , about_path %></li>
+        <li><%= link_to "Login" , about_path %></li>
      
       </ul>
     </div><!-- /.navbar-collapse -->
