added login page

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -4,7 +4,7 @@ $navbar-default-link-color:  		 white ;
 $navbar-default-brand-color:  		 #f39c12 ; 
 $navbar-default-brand-hover-color:	 white ;
 $btn-primary-bg: 					 #f39c12 ;
-$navbar-default-toggle-icon-bar-bg:	 white ;
+$navbar-default-toggle-icon-bar-bg:	 #f39c12 ;
 $navbar-default-toggle-border-color: #f39c12  ;
 
 @import "bootstrap" ;
