--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home" , root_path %></li>
         <li><%= link_to "About" , about_path %></li>
-        <li><%= link_to "Login" , about_path %></li>
+        <li><%= link_to "Login" , login_path %></li>
      
       </ul>
     </div><!-- /.navbar-collapse -->
