--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,16 @@
 <div class ="jumbotron">
 	<h1>Welcome to the future.</h1>
 	<p>Good things coming soon.</p>
-	<p><%= link_to "Sign up", "#" , class: "btn btn-primary btn-lg"%></p>
+	
+	<% if user_signed_in? %>
+		
+
+	<% else %>
+		<p>
+			<%= link_to "Login", new_user_session_path , class: "btn btn-primary btn-lg"%>
+			<%= link_to "Sign up", new_user_registration_path, class: "btn btn-default btn-lg"%>
+		</p>
+	<% end %>	
+
+
 </div>
