--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,5 +1,7 @@
 <div class ="jumbotron">
 	<h1>Login</h1>
-	<p>Create account</p>
-	<p>Forgot password</p>
+	<p>
+		<%= link_to "Login", new_user_session_path , class: "btn btn-primary btn-lg"%>
+		<%= link_to "Sign up", new_user_registration_path, class: "btn btn-default btn-lg"%>
+	</p>
 </div>
