--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
         
       <% if user_signed_in? %>
        
+          <li><%= link_to "Account settings" , edit_user_registration_path %></li>
           <li><%= link_to "Logout" , destroy_user_session_path, method: :delete %></li>
 
       <% else %>    
