Lots of formatting in the pins view and index

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -8,3 +8,7 @@ $navbar-default-toggle-icon-bar-bg:	 #f39c12 ;
 $navbar-default-toggle-border-color: #f39c12  ;
 
 @import "bootstrap" ;
+
+.center {
+	text-align: center;
+}
