--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,5 @@
 <div class ="jumbotron">
-	<h1>About me</h1>
-	<p>I ended up in software PM without any prior engineering background.  Decided I had to learn how to code. So I've been learning at One Month the basics of Ruby on Rails.</p> 
-	<p>This is my first project.</p>
+	<h1>About this site.</h1>
+	<p>I built this site following the detailed instructions in the Ruby on Rails class through OneMonth.com. That's an online tutorial to help people learn to code. I recommend it if you're interested in understanding how Rails works. Might be a good first step, but you're not going to become a software engineer. Still, you'll learn quite a bit. They've got other interesting classes online as well.</p>
 	<p><%= link_to "Connect", "#" , class: "btn btn-primary btn-lg"%></p>
 </div>
