--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class ="jumbotron">
-	<h1>Welcome to the future.</h1>
-	<p>Good things coming soon.</p>
+	<h1>Hi!</h1>
+	<p>This is a Pinterest style app for my friends and family. Feel free to create an account to add pictures that you want to share. But remember, this is a family web site.</p>
 	
 	<% if user_signed_in? %>
 		
