--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -10,7 +10,7 @@
  
           <% if pin.user == current_user %>
             <div class='actions'>
-              <%= link_to 'Edit', edit_pin_path(pin) %>
+              <%= link_to 'Edit', edit_pin_path(pin) %> |
               <%= link_to 'Delete', pin, method: :delete, data: { confirm: 'Are you sure?' } %> 
             </div>
           <% end %>
