Load pins in reverse chronological order

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -6,7 +6,7 @@ $navbar-default-brand-hover-color:	 white ;
 $btn-primary-bg: 					 #f39c12 ;
 $navbar-default-toggle-icon-bar-bg:	 #f39c12 ;
 $navbar-default-toggle-border-color: #f39c12  ;
-
+@import "bootstrap-sprockets" ;
 @import "bootstrap" ;
 
 .center {
