--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -12,9 +12,12 @@
        			<p><strong><%= @pin.user.email if @pin.user %></strong></p>		
 
 				<% if @pin.user == current_user %>
-				  <%= link_to 'Edit', edit_pin_path(@pin) %> |
-				  <%= link_to 'Back', pins_path %>
-				<% end %>
+				    <%= link_to edit_pin_path(@pin) do %>
+              			<span class='glyphicon glyphicon-edit'></span>
+              			Edit 
+              		<% end %> 
+				<% end %> |
+				<%= link_to 'Back', pins_path %>
 			</div>
 		</div>	
 	</div>	
