--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -9,14 +9,15 @@
 				
 			<div class='panel body'>
 				<p><%= @pin.description %></p>
-       			<p><strong><%= @pin.user.email if @pin.user %></strong></p>		
+       			<p><strong><%= @pin.user.name if @pin.user %></strong></p>		
 
 				<% if @pin.user == current_user %>
 				    <%= link_to edit_pin_path(@pin) do %>
               			<span class='glyphicon glyphicon-edit'></span>
               			Edit 
               		<% end %> 
-				<% end %> |
+              		|
+				<% end %> 
 				<%= link_to 'Back', pins_path %>
 			</div>
 		</div>	
